--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
-    "name": "genesis/behat-stats-log-extension",
+    "name": "genesis/behat-stats-logger",
     "description": "Display a tree line of the time it takes to get through all the scenarios.",
+    "keywords": ["behat stats", "behat statistics"],
+    "license": "MIT",
     "require-dev": {
         "behat/behat": "~3.0"
     },
     "autoload": {
         "psr-4": {
-            "Genesis\\Testing\\Stats\\": "./src"
+            "Genesis\\Stats\\": "./src"
         }
     }
 }
